# coala_client

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
examples/Gene-Variant/: biothings_query.cwl  gene-variant_mcp.py  readme.md
skills/: SKILL.md
src/coala_client/: __init__.py  _repo.py  cli.py  config.py  llm_client.py  main.py  mcp_import.py  mcp_manager.py  sandbox.py  skill_import.py  tools_index.py
