[project]
name = "coala-client"
version = "0.1.0"
description = "A simple command line interface for LLM with MCP server and OpenAI-compatible API support"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.68.0",
    "mcp>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
coala = "coala_client.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coala_client"]

[tool.hatch.build.targets.sdist]
include = ["src/coala_client"]
