[tool.poetry]
name = "coala-client"
version = "0.1.0"
description = "A simple command line interface for LLM with MCP server and OpenAI-compatible API support"
authors = ["coala-info"]
license = "MIT"
readme = "README.md"
packages = [{ include = "coala_client", from = "src" }]
homepage = "https://github.com/coala-info/coala_client"
repository = "https://github.com/coala-info/coala_client"
documentation = "https://github.com/coala-info/coala_client#readme"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = ">=3.10"
openai = ">=1.68.0"
mcp = ">=1.0.0"
click = ">=8.1.0"
rich = ">=13.0.0"
pydantic = ">=2.0.0"
pydantic-settings = ">=2.0.0"
httpx = ">=0.27.0"
anyio = ">=4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.24.0"

[tool.poetry.scripts]
coala = "coala_client.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
